# QLEX

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: CONTRIBUTING.md  api-reference.md  cli-reference.md  registry.md  terminal-ui.md
qlex/: __init__.py  cli.py  compare.py  exceptions.py  export.py  filters.py  models.py  registry.py
qlex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
qlex/data/: codes.json
qlex/ui/: __init__.py  app.py  renderer.py  screens.py  state.py  theme.py
tests/: test_compare.py  test_export.py  test_filters.py  test_registry.py
